fix: Prevent page breaks in sections
When printing, the page break was landing on company names or inside of
job description points. Avoiding page breaks inside of list items
prevents the awkward break.

--- a/scss/_content.scss
+++ b/scss/_content.scss
@@ -9,6 +9,9 @@ main {
   }
   ul {
     list-style-type: none;
+    li {
+      page-break-inside: avoid;
+    }
     &.bunch {
       li {
         display: inline;
